<resources>
    <string name="app_name">Mad Libs</string>
    <string name="title">Welcome to Mad Libs!</string>
    <string name="welcomeText">Welcome to Mad Libs! I will ask you to fill in words to complete a story. You won\'t be able to see the whole story until you are done filling in all the missing words. That\'s part of the fun. Click below to get started!</string>
    <string name="buttonText">Click here to get started!</string>
    <string name="inputTitle">Fill in the blanks below to complete the story!</string>
    <string name="logoDescription">logo</string>
    <string name="resultTitle">See your finished story below!</string>
    <string name="inputButton">Next</string>
    <string name="remainderText">Words left to fill in:</string>
    <string name="thanksText">Thanks for playing!</string>
</resources>
